# python_interops

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/extensions/pybind11/: readonly_memoryview.hpp  readonly_memoryview.ipp
src/module/: __init__.py  _array_case.cpp  _circular_buffer_case.cpp
tests/module/: array_case_test.py  circular_buffer_case_test.py  requirements.txt
